finished up AVL tree, a lot more messy than I thought... but it's pretty cool. Added edges between nodes, but buggy, z-index behaving weirdly, maybe because of anime.js

--- a/tree.css
+++ b/tree.css
@@ -8,5 +8,15 @@
 	line-height: 40px;
 	vertical-align: center; 
 	background-color: rgb(255,255,255);
+	z-index:2;
 }
 
+.divstyle {
+	/*background-color: rgb(0,0,100);
+	width: 200px;
+	height: 200px;*/
+}
+
+.linestyle {
+	z-index:1;
+}
